--- a/css/bwp-launch.webflow.css
+++ b/css/bwp-launch.webflow.css
@@ -18,7 +18,7 @@
 }
 
 .body {
-  background-color: #fec8d8;
+  background-color: #ff8ba7;
 }
 
 .text-block {
@@ -42,6 +42,8 @@
 
 .image {
   position: absolute;
+  left: 60px;
+  top: 200px;
   z-index: -10;
   height: 250px;
   margin-top: 0px;
@@ -71,14 +73,11 @@
 
 .text-block-2 {
   position: absolute;
-  left: auto;
-  top: 355px;
-  margin-top: -11px;
-  margin-left: 65px;
-  padding-top: 44px;
+  left: 120px;
+  top: 278px;
   -webkit-perspective: 2000px;
   perspective: 2000px;
-  font-family: Roboto, sans-serif;
+  font-family: Lato, sans-serif;
   color: #000;
   font-size: 34px;
   font-weight: 700;
@@ -93,8 +92,8 @@
 .image-3 {
   position: absolute;
   left: auto;
-  top: 0%;
-  right: 8%;
+  top: -24%;
+  right: -2%;
   bottom: 0%;
   height: 250px;
   margin-top: 310px;
@@ -104,15 +103,15 @@
 .text-block-3 {
   position: absolute;
   left: auto;
-  top: 0%;
-  right: 8%;
+  top: -23%;
+  right: -2%;
   bottom: 0%;
   height: 100px;
   margin-top: 398px;
   margin-right: 185px;
   margin-left: 0px;
   padding-left: 0px;
-  font-family: Roboto, sans-serif;
+  font-family: Lato, sans-serif;
   color: #000;
   font-size: 34px;
   font-weight: 700;
@@ -126,10 +125,9 @@
 
 .image-4 {
   position: absolute;
-  left: 2%;
-  top: auto;
+  left: 86px;
+  top: 520px;
   right: auto;
-  bottom: -19%;
   height: 300px;
 }
 
@@ -148,15 +146,13 @@
 
 .text-block-5 {
   position: absolute;
-  left: 0%;
-  top: auto;
+  left: 143px;
+  top: 630px;
   right: auto;
-  bottom: 0%;
+  bottom: auto;
   z-index: 10;
   margin-top: 0px;
-  margin-bottom: -33px;
-  margin-left: 78px;
-  font-family: Roboto, sans-serif;
+  font-family: Lato, sans-serif;
   color: #000;
   font-size: 34px;
   font-weight: 700;
@@ -164,7 +160,7 @@
 }
 
 .body-2 {
-  background-color: #fec8d8;
+  background-color: #ff8ba7;
 }
 
 .image-5 {
@@ -193,19 +189,23 @@
   height: 150px;
   margin-top: 231px;
   margin-right: 500px;
-  font-family: 'Changa One', Impact, sans-serif;
+  font-family: Lato, sans-serif;
   color: #000;
   font-size: 34px;
+  line-height: 20px;
+  font-weight: 700;
   text-align: center;
 }
 
 .container-3 {
+  max-width: 50vw;
   margin-top: 218px;
 }
 
 .heading {
-  font-family: 'Changa One', Impact, sans-serif;
-  font-weight: 400;
+  font-family: Lato, sans-serif;
+  font-size: 34px;
+  font-weight: 700;
 }
 
 .paragraph {
@@ -218,7 +218,8 @@
 }
 
 .text-block-9 {
-  width: 700px;
+  width: auto;
+  max-width: none;
   margin-top: 13px;
   border-style: dotted;
   border-width: 3px;
@@ -229,7 +230,8 @@
 }
 
 .text-block-9-copy {
-  width: 700px;
+  width: auto;
+  max-width: none;
   margin-top: 13px;
   border-style: dotted;
   border-width: 3px;
@@ -240,9 +242,11 @@
 }
 
 .blackblock {
-  width: 300px;
-  margin-top: 13px;
-  margin-left: 200px;
+  width: auto;
+  margin-top: 60px;
+  margin-left: auto;
+  padding-right: 30px;
+  padding-left: 30px;
   border-style: dotted;
   border-width: 3px;
   border-color: #000;
@@ -253,7 +257,8 @@
 }
 
 .blackblock-copy {
-  width: 700px;
+  width: auto;
+  max-width: none;
   margin-top: 13px;
   border-style: dotted;
   border-width: 3px;
@@ -264,6 +269,7 @@
 }
 
 .link-block-2 {
+  position: static;
   text-decoration: none;
 }
 
@@ -309,13 +315,16 @@
 }
 
 .paragraph-2 {
-  position: absolute;
-  left: 30%;
+  position: static;
+  left: 20vw;
   top: 40%;
-  right: 0%;
+  right: 20vw;
   bottom: 0%;
-  width: 500px;
+  width: auto;
+  max-width: 100vw;
+  margin-top: 120px;
   font-family: Lato, sans-serif;
+  color: #000;
   font-size: 22px;
   line-height: 30px;
   font-weight: 700;
@@ -323,13 +332,13 @@
 }
 
 .image-11 {
-  width: 677px;
+  width: auto;
   margin-top: 54px;
-  margin-left: 125px;
+  margin-left: auto;
 }
 
 .body-3 {
-  background-color: #fec8d8;
+  background-color: #ff8ba7;
 }
 
 .image-12 {
@@ -338,20 +347,27 @@
 }
 
 .container-4 {
+  max-width: 50vw;
   margin-top: 112px;
 }
 
 .paragraph-3 {
-  font-family: Roboto, sans-serif;
+  font-family: Lato, sans-serif;
+  color: #000;
   font-size: 22px;
   line-height: 30px;
+  font-weight: 400;
+  text-align: left;
 }
 
 .button {
-  margin-left: 409px;
+  margin-left: auto;
+  padding-right: 40px;
+  padding-left: 40px;
   border: 2px dashed #000;
   border-radius: 11px;
   background-color: rgba(56, 152, 236, 0);
+  font-family: Lato, sans-serif;
   color: #000;
 }
 
@@ -359,25 +375,30 @@
   position: absolute;
   left: auto;
   top: 10%;
-  right: 30%;
+  right: 17%;
   bottom: auto;
   width: 250px;
+  margin-right: 21px;
 }
 
 .heading-2 {
   position: absolute;
   left: auto;
   top: 15%;
-  right: 32%;
+  right: 20%;
   bottom: auto;
   width: 200px;
-  font-family: 'Changa One', Impact, sans-serif;
+  font-family: Lato, sans-serif;
   color: #000;
+  font-size: 34px;
+  line-height: 38px;
   text-align: center;
 }
 
 .heading-3 {
-  color: #000;
+  margin-top: 50px;
+  font-family: Lato, sans-serif;
+  color: #333;
   text-align: center;
 }
 
@@ -393,6 +414,182 @@
 
 .container-5 {
   padding-bottom: 65px;
+}
+
+.paragraph-4 {
+  font-family: Lato, sans-serif;
+  font-size: 22px;
+  line-height: 30px;
+}
+
+.section-2 {
+  max-width: 100vw;
+}
+
+.heading-4 {
+  font-family: Lato, sans-serif;
+  font-size: 34px;
+}
+
+.container-7 {
+  text-align: center;
+}
+
+.container-8 {
+  text-align: center;
+}
+
+@media screen and (max-width: 479px) {
+  .image {
+    left: 145px;
+    top: 184px;
+    max-width: 50%;
+  }
+  .container {
+    margin-top: 420px;
+    margin-bottom: 20px;
+  }
+  .image-2 {
+    height: 200px;
+    margin-top: -35px;
+    margin-left: auto;
+    padding-right: 10px;
+    padding-left: 10px;
+  }
+  .text-block-2 {
+    left: 164px;
+    line-height: 16px;
+    text-decoration: none;
+  }
+  .image-3 {
+    max-width: 50%;
+    margin-top: 298px;
+    margin-right: 169px;
+  }
+  .text-block-3 {
+    height: 100px;
+    margin-top: 390px;
+    font-size: 34px;
+    line-height: 16px;
+  }
+  .image-4 {
+    left: 136px;
+    top: 825px;
+    max-width: 50%;
+  }
+  .text-block-5 {
+    left: 101px;
+    top: 950px;
+    line-height: 16px;
+  }
+  .image-5 {
+    max-width: 100vw;
+    margin-top: -35px;
+    margin-bottom: 50px;
+    margin-left: auto;
+    padding-right: 10px;
+    padding-left: 10px;
+  }
+  .image-6 {
+    left: 51px;
+    right: auto;
+  }
+  .text-block-6 {
+    left: 165px;
+    top: 0%;
+  }
+  .container-3 {
+    max-width: 90vw;
+  }
+  .blackblock {
+    margin-top: 60px;
+    padding-right: 30px;
+    padding-left: 30px;
+  }
+  .image-7 {
+    margin-top: -22px;
+    margin-left: 10px;
+  }
+  .image-8 {
+    max-width: 200%;
+    margin-top: -7px;
+    margin-left: -52px;
+  }
+  .image-9 {
+    margin-top: -47px;
+    margin-left: 59px;
+    opacity: 0;
+  }
+  .image-10 {
+    max-width: 300%;
+    margin-top: -31px;
+    margin-left: -222px;
+  }
+  .paragraph-2 {
+    left: 5vw;
+    top: 45%;
+    right: 5vw;
+    overflow: visible;
+    width: auto;
+    margin-top: 220px;
+    padding-right: 10px;
+    padding-left: 10px;
+  }
+  .image-11 {
+    width: auto;
+    padding-bottom: 20px;
+  }
+  .image-12 {
+    margin-top: -35px;
+    margin-bottom: 50px;
+    margin-left: auto;
+    padding-right: 10px;
+    padding-left: 10px;
+  }
+  .container-4 {
+    max-width: 90vw;
+  }
+  .paragraph-3 {
+    padding-right: 10px;
+    padding-left: 10px;
+  }
+  .button {
+    margin-left: 80px;
+    padding-right: 40px;
+    padding-left: 40px;
+  }
+  .image-13 {
+    margin-right: -81px;
+    padding-top: 0px;
+    padding-right: 22px;
+  }
+  .heading-2 {
+    margin-right: -81px;
+    padding-top: 1px;
+    padding-right: 37px;
+  }
+  .heading-3 {
+    margin-right: 10px;
+    margin-left: 10px;
+    text-align: center;
+  }
+  .image-14 {
+    margin-top: 20px;
+    margin-bottom: 20px;
+    margin-left: auto;
+  }
+  .container-6 {
+    padding-bottom: 0px;
+  }
+  .heading-4 {
+    margin-top: 35px;
+    padding-right: 10px;
+    padding-left: 10px;
+    color: #000;
+  }
+  .container-8 {
+    text-align: center;
+  }
 }
 
 #w-node-ddea70f5d6eb-25098ce3 {
