--- a/css/bwp-launch.webflow.css
+++ b/css/bwp-launch.webflow.css
@@ -476,6 +476,8 @@
     left: 136px;
     top: 825px;
     max-width: 50%;
+    margin-left: -21px;
+    padding-left: 0px;
   }
   .text-block-5 {
     left: 101px;
@@ -577,6 +579,8 @@
     margin-top: 20px;
     margin-bottom: 20px;
     margin-left: auto;
+    padding-right: 12px;
+    padding-left: 12px;
   }
   .container-6 {
     padding-bottom: 0px;
